example-apps/gateway-api/combined.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tcp-echo
  template:
    metadata:
      labels:
        app: tcp-echo
    spec:
      containers:
        - name: echo-server
          image: hashicorp/http-echo
          args:
          - "-text=hello from example-app"
          ports:
          - containerPort: 5678
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-service
spec:
  selector:
    app: tcp-echo
  ports:
  - protocol: TCP
    port: 12345
    targetPort: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-echo-gateway
spec:
  gatewayClassName: pico-sh-gateway-cl
  listeners:
  - name: tcp-gw
    protocol: TCP
    port: 59123
    allowedRoutes:
      namespaces:
        from: All
  - name: http-gw
    protocol: HTTP
    port: 80
    hostname: "web-test"  
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-echo-route
spec:
  parentRefs:
  - name: tcp-echo-gateway
    sectionName: tcp-gw
  rules:
  - backendRefs:
    - name: tcp-echo-service
      port: 12345
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo-route
spec:
  parentRefs:
  - name: tcp-echo-gateway
    sectionName: http-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/" 
    backendRefs:
    - name: tcp-echo-service
      port: 12345
